--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ gunicorn==21.2.0
 werkzeug==2.3.7
 SQLAlchemy==2.0.20
 email-validator==2.0.0.post2
-requests==2.31.0 
+requests==2.31.0
+boto3==1.34.34
+python-magic-bin==0.4.14 
