--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,9 @@ SQLAlchemy==2.0.20
 email-validator==2.0.0.post2
 requests==2.31.0
 boto3==1.34.34
-python-magic-bin==0.4.14 
+python-magic-bin==0.4.14
+# OCR Dependencies
+easyocr==1.7.0
+opencv-python==4.8.1.78
+Pillow==10.0.1
+numpy==1.24.3 
