--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,10 @@ python-magic-bin==0.4.14
 easyocr==1.7.0
 opencv-python==4.8.1.78
 Pillow==10.0.1
-numpy==1.24.3 
+numpy==1.24.3
+
+# Translation Dependencies
+transformers==4.36.2
+torch==2.1.1
+sentencepiece==0.1.99
+protobuf==4.25.1 
